# MonkeyCLI

./: Cargo.toml  README.MD
src/: agent.rs  main.rs  ollama.rs  prompts.rs  repl.rs  workspace.rs
